phabricator/overlays/example/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phabricator
spec:
  template:
    spec:
      containers:
        - name: phabricator
          image: yukikpc/phabricator:develop
          livenessProbe:
            httpGet:
              httpHeaders:
              - name: Host
                value: localhost
          readinessProbe:
            httpGet:
              httpHeaders:
              - name: Host
                value: localhost
      volumes:
        - name: data
          $patch: delete
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
